fixes spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,7 +102,8 @@ nav {
   
 
   .indexcards-show {
-    padding-left:10%;
+   
+    padding-left:15%;
     font-size: x-large;
   }
   
